--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="thank-you-container">
             <div class="thank-you-content">
                 <h1 class="thank-you-title">Thank you for participating!</h1>
-                <p class="thank-you-message">Your contribution to our research is greatly appreciated. Please copy the completion code to Prolific: ${{ vars.COMPLETION_CODE }}</p>
+                <p class="thank-you-message">Your contribution to our research is greatly appreciated. Please copy the completion code to Prolific: <code>>__COMPLETION_CODE__</code</p>
             </div>
             <div class="confetti-container" id="confetti-container"></div>
         </div>
