--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                 // const randomListId = Math.floor(Math.random() * 20).toString();
                 // groupId = randomListId;
                 
-                console.log(`Selected experiment list_id: ${groupId}`);
+                console.log('Selected experiment list_id: ${groupId}');
                 
                 // Get experiment items with the random list_id
                 const experimentItems = data.filter(item => item.list_id === String(groupId));
